--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
 	<title>Atom App</title>
 	<link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./resources/icons/sprite/sprite.css">
-	<link rel="stylesheet" href="./dist/bundle.css?rev=1900dcf956a1fcff014907271cab613c">
+	<link rel="stylesheet" href="./dist/bundle.css?rev=e00723e120bf1cb28f09ba7a4b3b2a89">
 	<!--?rev=@@hash-->
 </head>
 
@@ -53,36 +53,73 @@
 					<div class="menu menu--desktop">
 						<div class="container">
 							<div class="menu__items">
-								<a href="#" class="menu__item">
-									О компании
+								<a href="#">
+									<div class="menu__item">
+										О компании
+									</div>
 								</a>
-								<a href="#" class="menu__item">
-									Услуги
+								<a href="#">
+									<div class="menu__item">
+										Услуги
+										<div class="menu__other-items">
+											<a href="#" class="menu__other-item">Услуга 1</a>
+											<a href="#" class="menu__other-item">Услуга 2</a>
+											<a href="#" class="menu__other-item">Услуга 3</a>
+											<a href="#" class="menu__other-item">Услуга 4</a>
+											<a href="#" class="menu__other-item">Услуга 5</a>
+										</div>
+									</div>
 								</a>
-								<a href="#" class="menu__item">
-									Каталог
+								<a href="#">
+									<div class="menu__item">
+										Каталог
+										<div class="menu__other-items">
+											<a href="#" class="menu__other-item">Трубы</a>
+											<a href="#" class="menu__other-item">Уголок</a>
+											<a href="#" class="menu__other-item">Полоса</a>
+											<a href="#" class="menu__other-item">Проволока</a>
+											<a href="#" class="menu__other-item">Балка</a>
+											<a href="#" class="menu__other-item">Строительная арматура</a>
+											<a href="#" class="menu__other-item">Швеллер</a>
+										</div>
+									</div>
 								</a>
-								<a href="#" class="menu__item">
-									Доставка
+								<a href="#">
+									<div class="menu__item">
+										Доставка
+									</div>
 								</a>
-								<a href="#" class="menu__item">
-									Прайс-лист
+								<a href="#">
+									<div class="menu__item">
+										Прайс-лист
+									</div>
 								</a>
-								<a href="#" class="menu__item">
-									Спецпредложения
+								<a href="#">
+									<div class="menu__item">
+										Спецпредложения
+									</div>
 								</a>
-								<a href="#" class="menu__item">
-									Инвесторам
+								<a href="#">
+									<div class="menu__item">
+										Инвесторам
+									</div>
 								</a>
-								<a href="#" class="menu__item">
-									Благотворительность
+								<a href="#">
+									<div class="menu__item">
+										Благотворительность
+									</div>
 								</a>
-								<a href="#" class="menu__item">
-									Отзывы
+								<a href="#">
+									<div class="menu__item">
+										Отзывы
+									</div>
 								</a>
-								<a href="#" class="menu__item">
-									Контакты
+								<a href="#">
+									<div class="menu__item">
+										Контакты
+									</div>
 								</a>
+
 							</div>
 						</div>
 					</div>
