--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
 	<title>Atom App</title>
 	<link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./resources/icons/sprite/sprite.css">
-	<link rel="stylesheet" href="./dist/bundle.css?rev=e00723e120bf1cb28f09ba7a4b3b2a89">
+	<link rel="stylesheet" href="./dist/bundle.css?rev=6c987c79bef281d22c79086c5bd76e80">
 	<!--?rev=@@hash-->
 </head>
 
@@ -119,7 +119,6 @@
 										Контакты
 									</div>
 								</a>
-
 							</div>
 						</div>
 					</div>
@@ -159,7 +158,6 @@
 								<a href="#" class="menu__item menu__item--mobile">
 									Контакты
 								</a>
-
 							</div>
 						</div>
 						<div id="menuOverlay" class="menu__overlay"></div>
@@ -170,6 +168,113 @@
 
 		</div>
 	</header>
+	<!--end-->
+
+	<!--begin-->
+	<section class="content">
+		
+	</section>
+	<!--end-->
+
+	<!--begin-->
+	<footer class="footer">
+		<div class="container-fluid">
+			<div class="footer__row">
+				<div class="container">
+					<div class="footer__info">
+						<div class="footer__logo">
+							<!--begin-->
+							<div class="logo">
+								<div class="logo__pic"></div>
+								<div class="logo__text">
+									<span class="logo__sign logo__sign--bold">Атом</span>
+									<span class="logo__sign logo__sign--margin-left">Сталь</span>
+								</div>
+							</div>
+							<!--end-->
+						</div>
+						<div class="footer__contact-items">
+							<div class="footer__contact-item">
+								<div class="icon icon-geo footer__icon"></div>
+								<div class="header__sign">115088, г. Москва, ул. Угрешская , д.14 стр.1 офис 522</div>
+							</div>
+							<div class="footer__contact-item">
+								<div class="footer__sign">Права защищены 2014</div>
+							</div>
+							<div class="footer__contact-item">
+								<!--begin-->
+								<div class="atm-button">Подписаться на нас</div>
+								<!--end-->
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="footer__row">
+				<nav>
+					<!--begin-->
+					<div class="menu menu--desktop">
+						<div class="container">
+							<div class="menu__items">
+								<a href="#">
+									<div class="menu__item">
+										О компании
+									</div>
+								</a>
+								<a href="#">
+									<div class="menu__item">
+										Услуги
+									</div>
+								</a>
+								<a href="#">
+									<div class="menu__item">
+										Каталог
+									</div>
+								</a>
+								<a href="#">
+									<div class="menu__item">
+										Доставка
+									</div>
+								</a>
+								<a href="#">
+									<div class="menu__item">
+										Прайс-лист
+									</div>
+								</a>
+								<a href="#">
+									<div class="menu__item">
+										Спецпредложения
+									</div>
+								</a>
+								<a href="#">
+									<div class="menu__item">
+										Инвесторам
+									</div>
+								</a>
+								<a href="#">
+									<div class="menu__item">
+										Благотворительность
+									</div>
+								</a>
+								<a href="#">
+									<div class="menu__item">
+										Отзывы
+									</div>
+								</a>
+								<a href="#">
+									<div class="menu__item">
+										Контакты
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+					<!--end-->
+				</nav>
+			</div>
+
+		</div>
+	</footer>
 	<!--end-->
 
 	<script src="./bower_components/jquery/dist/jquery.min.js"></script>
