production section added

--- a/client/index.html
+++ b/client/index.html
@@ -7,275 +7,357 @@
 	<title>Atom App</title>
 	<link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./resources/icons/sprite/sprite.css">
-	<link rel="stylesheet" href="./dist/bundle.css?rev=6c987c79bef281d22c79086c5bd76e80">
+	<link rel="stylesheet" href="./dist/bundle.css?rev=f504338bfde3e2f7b9bd3863d4ed8807">
 	<!--?rev=@@hash-->
 </head>
 
 <body class="likearts-content">
-	<!--begin-->
-	<header class="header">
-		<div class="container-fluid">
-			<div class="header__row">
-				<div class="container">
-					<div class="header__info">
-						<div class="header__logo">
-							<!--begin-->
-							<div class="logo">
-								<div class="logo__pic"></div>
-								<div class="logo__text">
-									<span class="logo__sign logo__sign--bold">Атом</span>
-									<span class="logo__sign logo__sign--margin-left">Сталь</span>
-								</div>
-							</div>
-							<!--end-->
-						</div>
-						<div class="header__contact-items">
-							<div class="header__contact-item">
-								<div class="icon icon-clock header__icon"></div>
-								<div class="header__sign">Режим работы круглосуточно с Пн по Вс</div>
-							</div>
-							<div class="header__contact-item">
-								<div class="icon icon-phone header__icon"></div>
-								<div class="header__sign header__sign--phone">+7(495) 677-63-68</div>
-							</div>
-							<div class="header__contact-item">
+	<div class="container-fluid">
+		<div class="main-content">
+			<!--begin-->
+			<header class="header">
+				<div class="header__row">
+					<div class="container">
+						<div class="header__info">
+							<div class="header__logo">
 								<!--begin-->
-								<div class="atm-button">Обратный звонок</div>
+								<div class="logo">
+									<div class="logo__pic"></div>
+									<div class="logo__text">
+										<span class="logo__sign logo__sign--bold">Атом</span>
+										<span class="logo__sign logo__sign--margin-left">Сталь</span>
+									</div>
+								</div>
 								<!--end-->
+							</div>
+							<div class="header__contact-items">
+								<div class="header__contact-item">
+									<div class="icon icon-clock header__icon"></div>
+									<div class="header__sign">Режим работы круглосуточно с Пн по Вс</div>
+								</div>
+								<div class="header__contact-item">
+									<div class="icon icon-phone header__icon"></div>
+									<div class="header__sign header__sign--phone">+7(495) 677-63-68</div>
+								</div>
+								<div class="header__contact-item">
+									<!--begin-->
+									<div class="atm-button">Обратный звонок</div>
+									<!--end-->
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="header__row">
-				<nav>
-					<!--begin-->
-					<div class="menu menu--desktop">
-						<div class="container">
-							<div class="menu__items">
-								<a href="#">
-									<div class="menu__item">
-										О компании
-									</div>
-								</a>
-								<a href="#">
-									<div class="menu__item">
-										Услуги
-										<div class="menu__other-items">
-											<a href="#" class="menu__other-item">Услуга 1</a>
-											<a href="#" class="menu__other-item">Услуга 2</a>
-											<a href="#" class="menu__other-item">Услуга 3</a>
-											<a href="#" class="menu__other-item">Услуга 4</a>
-											<a href="#" class="menu__other-item">Услуга 5</a>
+				<div class="header__row">
+					<nav>
+						<!--begin-->
+						<div class="menu menu--desktop">
+							<div class="container">
+								<div class="menu__items">
+									<a href="#">
+										<div class="menu__item">
+											О компании
 										</div>
-									</div>
-								</a>
-								<a href="#">
-									<div class="menu__item">
-										Каталог
-										<div class="menu__other-items">
-											<a href="#" class="menu__other-item">Трубы</a>
-											<a href="#" class="menu__other-item">Уголок</a>
-											<a href="#" class="menu__other-item">Полоса</a>
-											<a href="#" class="menu__other-item">Проволока</a>
-											<a href="#" class="menu__other-item">Балка</a>
-											<a href="#" class="menu__other-item">Строительная арматура</a>
-											<a href="#" class="menu__other-item">Швеллер</a>
+									</a>
+									<a href="#">
+										<div class="menu__item">
+											Услуги
+											<div class="menu__other-items">
+												<a href="#" class="menu__other-item">Услуга 1</a>
+												<a href="#" class="menu__other-item">Услуга 2</a>
+												<a href="#" class="menu__other-item">Услуга 3</a>
+												<a href="#" class="menu__other-item">Услуга 4</a>
+												<a href="#" class="menu__other-item">Услуга 5</a>
+											</div>
 										</div>
-									</div>
-								</a>
-								<a href="#">
-									<div class="menu__item">
-										Доставка
-									</div>
-								</a>
-								<a href="#">
-									<div class="menu__item">
-										Прайс-лист
-									</div>
-								</a>
-								<a href="#">
-									<div class="menu__item">
-										Спецпредложения
-									</div>
-								</a>
-								<a href="#">
-									<div class="menu__item">
-										Инвесторам
-									</div>
-								</a>
-								<a href="#">
-									<div class="menu__item">
-										Благотворительность
-									</div>
-								</a>
-								<a href="#">
-									<div class="menu__item">
-										Отзывы
-									</div>
-								</a>
-								<a href="#">
-									<div class="menu__item">
-										Контакты
-									</div>
-								</a>
+									</a>
+									<a href="#">
+										<div class="menu__item">
+											Каталог
+											<div class="menu__other-items">
+												<a href="#" class="menu__other-item">Трубы</a>
+												<a href="#" class="menu__other-item">Уголок</a>
+												<a href="#" class="menu__other-item">Полоса</a>
+												<a href="#" class="menu__other-item">Проволока</a>
+												<a href="#" class="menu__other-item">Балка</a>
+												<a href="#" class="menu__other-item">Строительная арматура</a>
+												<a href="#" class="menu__other-item">Швеллер</a>
+											</div>
+										</div>
+									</a>
+									<a href="#">
+										<div class="menu__item">
+											Доставка
+										</div>
+									</a>
+									<a href="#">
+										<div class="menu__item">
+											Прайс-лист
+										</div>
+									</a>
+									<a href="#">
+										<div class="menu__item">
+											Спецпредложения
+										</div>
+									</a>
+									<a href="#">
+										<div class="menu__item">
+											Инвесторам
+										</div>
+									</a>
+									<a href="#">
+										<div class="menu__item">
+											Благотворительность
+										</div>
+									</a>
+									<a href="#">
+										<div class="menu__item">
+											Отзывы
+										</div>
+									</a>
+									<a href="#">
+										<div class="menu__item">
+											Контакты
+										</div>
+									</a>
+								</div>
 							</div>
 						</div>
-					</div>
-					<div id="menuBtn" class="menu__btn">
-						<i class="material-icons menu__btn-icon">menu</i>
-					</div>
-					<div class="menu menu--mobile">
-						<div id="menuContent" class="menu__body">
-							<div class="menu__items menu__items--mobile">
-								<a href="#" class="menu__item menu__item--mobile">
+						<div id="menuBtn" class="menu__btn">
+							<i class="material-icons menu__btn-icon">menu</i>
+						</div>
+						<div class="menu menu--mobile">
+							<div id="menuContent" class="menu__body">
+								<div class="menu__items menu__items--mobile">
+									<a href="#" class="menu__item menu__item--mobile">
 									О компании
 								</a>
-								<a href="#" class="menu__item menu__item--mobile menu__item--active">
+									<a href="#" class="menu__item menu__item--mobile menu__item--active">
 									Услуги
 								</a>
-								<a href="#" class="menu__item menu__item--mobile">
+									<a href="#" class="menu__item menu__item--mobile">
 									Каталог
 								</a>
-								<a href="#" class="menu__item menu__item--mobile">
+									<a href="#" class="menu__item menu__item--mobile">
 									Доставка
 								</a>
-								<a href="#" class="menu__item menu__item--mobile">
+									<a href="#" class="menu__item menu__item--mobile">
 									Прайс-лист
 								</a>
-								<a href="#" class="menu__item menu__item--mobile">
+									<a href="#" class="menu__item menu__item--mobile">
 									Спецпредложения
 								</a>
-								<a href="#" class="menu__item menu__item--mobile">
+									<a href="#" class="menu__item menu__item--mobile">
 									Инвесторам
 								</a>
-								<a href="#" class="menu__item menu__item--mobile">
+									<a href="#" class="menu__item menu__item--mobile">
 									Благотворительность
 								</a>
-								<a href="#" class="menu__item menu__item--mobile">
+									<a href="#" class="menu__item menu__item--mobile">
 									Отзывы
 								</a>
-								<a href="#" class="menu__item menu__item--mobile">
+									<a href="#" class="menu__item menu__item--mobile">
 									Контакты
 								</a>
-							</div>
-						</div>
-						<div id="menuOverlay" class="menu__overlay"></div>
-					</div>
-					<!--end-->
-				</nav>
-			</div>
-
-		</div>
-	</header>
-	<!--end-->
-
-	<!--begin-->
-	<section class="content">
-		
-	</section>
-	<!--end-->
-
-	<!--begin-->
-	<footer class="footer">
-		<div class="container-fluid">
-			<div class="footer__row">
-				<div class="container">
-					<div class="footer__info">
-						<div class="footer__logo">
-							<!--begin-->
-							<div class="logo">
-								<div class="logo__pic"></div>
-								<div class="logo__text">
-									<span class="logo__sign logo__sign--bold">Атом</span>
-									<span class="logo__sign logo__sign--margin-left">Сталь</span>
 								</div>
 							</div>
-							<!--end-->
+							<div id="menuOverlay" class="menu__overlay"></div>
 						</div>
-						<div class="footer__contact-items">
-							<div class="footer__contact-item">
-								<div class="icon icon-geo footer__icon"></div>
-								<div class="header__sign">115088, г. Москва, ул. Угрешская , д.14 стр.1 офис 522</div>
+						<!--end-->
+					</nav>
+				</div>
+			</header>
+			<!--end-->
+
+			<!--begin-->
+			<section class="content">
+				<!--begin-->
+				<section class="production">
+					<div class="container">
+						<div class="skew"></div>
+						<h1 class="production__title">Наша продукция</h1>
+						<div class="production__cards">
+							<div class="row">
+								<div class="col-sm-6 col-md-3 col-md-override">
+									<div class="card card--1">
+										<div class="card__numbers">
+											<span class="card__number card__number--large">01</span>
+											<span class="card__number">/12</span>
+										</div>
+										<div class="skew skew--card-skew"></div>
+										<div class="card__title">Строительная арматура</div>
+										<div class="card__description">
+											Представленный сортовой металлопрокат является незаменимым материалом. Он используется для монтажа железобетонных конструкций различных типов и обеспечивает их прочность, безопасность и долговечность. Именно арматура строительная обуславливает срок службы
+											возводимых объектов.
+										</div>
+										<div class="card__btn">
+											<a href="#" class="atm-link-button">Подробнее</a>
+										</div>
+									</div>
+								</div>
+
+								<div class="col-sm-6 col-md-3 col-md-override">
+									<div class="card card--2">
+										<div class="card__numbers">
+											<span class="card__number card__number--large">02</span>
+											<span class="card__number">/12</span>
+										</div>
+										<div class="skew skew--card-skew"></div>
+										<div class="card__title">Лист</div>
+										<div class="card__description">
+											Представленный металлопрокат имеет широкую сферу применения. Лист стальной используют при строительстве различных объектов, создании продукции (предметов интерьера, малых архитектурных форм и др.).
+										</div>
+										<div class="card__btn">
+											<a href="#" class="atm-link-button">Подробнее</a>
+										</div>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-3 col-md-override">
+									<div class="card card--3">
+										<div class="card__numbers">
+											<span class="card__number card__number--large">03</span>
+											<span class="card__number">/12</span>
+										</div>
+										<div class="skew skew--card-skew"></div>
+										<div class="card__title">Трубы</div>
+										<div class="card__description">
+											Представленная продукция является востребованным видом металлопроката. Она широко применяется в различных отраслях промышленности, в строительстве, ЖКХ, сельском хозяйстве и др.
+										</div>
+										<div class="card__btn">
+											<a href="#" class="atm-link-button">Подробнее</a>
+										</div>
+									</div>
+								</div>
+								<div class="col-sm-6 col-md-3 col-md-override">
+									<div class="card card--4">
+										<div class="card__numbers">
+											<span class="card__number card__number--large">04</span>
+											<span class="card__number">/12</span>
+										</div>
+										<div class="skew skew--card-skew"></div>
+										<div class="card__title">Уголок</div>
+										<div class="card__description">
+											Представленный металлопрокат представляет собой металлическое изделие с сечением Г-образной формы.
+										</div>
+										<div class="card__btn">
+											<a href="#" class="atm-link-button">Подробнее</a>
+										</div>
+									</div>
+								</div>
 							</div>
-							<div class="footer__contact-item">
-								<div class="footer__sign">Права защищены 2014</div>
+							<a href="#" class="production__circle-btn">
+								<span class="production__btn-icon">›</span>
+							</a>
+							<div class="production__btn">
+								<a href="#" class="atm-link-button atm-link-button--black">Каталог</a>
 							</div>
-							<div class="footer__contact-item">
+							
+						</div>
+					</div>
+				</section>
+				<!--end-->
+			</section>
+			<!--end-->
+
+			<!--begin-->
+			<footer class="footer">
+				<div class="footer__row">
+					<div class="container">
+						<div class="footer__info">
+							<div class="footer__logo">
 								<!--begin-->
-								<div class="atm-button">Подписаться на нас</div>
+								<div class="logo">
+									<div class="logo__pic"></div>
+									<div class="logo__text">
+										<span class="logo__sign logo__sign--bold">Атом</span>
+										<span class="logo__sign logo__sign--margin-left">Сталь</span>
+									</div>
+								</div>
 								<!--end-->
+							</div>
+							<div class="footer__contact-items">
+								<div class="footer__contact-item">
+									<div class="icon icon-geo footer__icon"></div>
+									<div class="header__sign">115088, г. Москва, ул. Угрешская , д.14 стр.1 офис 522</div>
+								</div>
+								<div class="footer__contact-item">
+									<div class="footer__sign">Права защищены 2014</div>
+								</div>
+								<div class="footer__contact-item">
+									<!--begin-->
+									<div class="atm-button">Подписаться на нас</div>
+									<!--end-->
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="footer__row">
-				<nav>
-					<!--begin-->
-					<div class="menu menu--desktop">
-						<div class="container">
-							<div class="menu__items">
-								<a href="#">
-									<div class="menu__item">
-										О компании
-									</div>
-								</a>
-								<a href="#">
-									<div class="menu__item">
-										Услуги
-									</div>
-								</a>
-								<a href="#">
-									<div class="menu__item">
-										Каталог
-									</div>
-								</a>
-								<a href="#">
-									<div class="menu__item">
-										Доставка
-									</div>
-								</a>
-								<a href="#">
-									<div class="menu__item">
-										Прайс-лист
-									</div>
-								</a>
-								<a href="#">
-									<div class="menu__item">
-										Спецпредложения
-									</div>
-								</a>
-								<a href="#">
-									<div class="menu__item">
-										Инвесторам
-									</div>
-								</a>
-								<a href="#">
-									<div class="menu__item">
-										Благотворительность
-									</div>
-								</a>
-								<a href="#">
-									<div class="menu__item">
-										Отзывы
-									</div>
-								</a>
-								<a href="#">
-									<div class="menu__item">
-										Контакты
-									</div>
-								</a>
+				<div class="footer__row">
+					<nav>
+						<!--begin-->
+						<div class="menu menu--desktop">
+							<div class="container">
+								<div class="menu__items">
+									<a href="#">
+										<div class="menu__item">
+											О компании
+										</div>
+									</a>
+									<a href="#">
+										<div class="menu__item">
+											Услуги
+										</div>
+									</a>
+									<a href="#">
+										<div class="menu__item">
+											Каталог
+										</div>
+									</a>
+									<a href="#">
+										<div class="menu__item">
+											Доставка
+										</div>
+									</a>
+									<a href="#">
+										<div class="menu__item">
+											Прайс-лист
+										</div>
+									</a>
+									<a href="#">
+										<div class="menu__item">
+											Спецпредложения
+										</div>
+									</a>
+									<a href="#">
+										<div class="menu__item">
+											Инвесторам
+										</div>
+									</a>
+									<a href="#">
+										<div class="menu__item">
+											Благотворительность
+										</div>
+									</a>
+									<a href="#">
+										<div class="menu__item">
+											Отзывы
+										</div>
+									</a>
+									<a href="#">
+										<div class="menu__item">
+											Контакты
+										</div>
+									</a>
+								</div>
 							</div>
 						</div>
-					</div>
-					<!--end-->
-				</nav>
-			</div>
-
+						<!--end-->
+					</nav>
+				</div>
+			</footer>
+			<!--end-->
 		</div>
-	</footer>
-	<!--end-->
+	</div>
 
 	<script src="./bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="./bower_components/hammerjs/hammer.min.js"></script>
