--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
 	<title>Atom App</title>
 	<link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./resources/icons/sprite/sprite.css">
-	<link rel="stylesheet" href="./dist/bundle.css?rev=f504338bfde3e2f7b9bd3863d4ed8807">
+	<link rel="stylesheet" href="./dist/bundle.css?rev=cebd1d00c174b0e45e4f659392bc3b43">
 	<!--?rev=@@hash-->
 </head>
 
@@ -60,7 +60,7 @@
 										</div>
 									</a>
 									<a href="#">
-										<div class="menu__item">
+										<div class="menu__item menu__item--active">
 											Услуги
 											<div class="menu__other-items">
 												<a href="#" class="menu__other-item">Услуга 1</a>
@@ -132,7 +132,7 @@
 									<a href="#" class="menu__item menu__item--mobile">
 									О компании
 								</a>
-									<a href="#" class="menu__item menu__item--mobile menu__item--active">
+									<a href="#" class="menu__item menu__item--mobile menu__item--mobile-active">
 									Услуги
 								</a>
 									<a href="#" class="menu__item menu__item--mobile">
