--- a/client/index.html
+++ b/client/index.html
@@ -7,13 +7,14 @@
 	<title>Atom App</title>
 	<link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./resources/icons/sprite/sprite.css">
-	<link rel="stylesheet" href="./dist/bundle.css?rev=0aed0a44733a11a9029ebbe56bc552a4">
+	<link rel="stylesheet" href="./dist/bundle.css?rev=8186a3166998fa1c2947d568a4960a0d">
 	<!--?rev=@@hash-->
 </head>
 
 <body class="likearts-content">
 	<div class="container-fluid">
 		<div class="main-content">
+
 			<!--begin-->
 			<header class="header">
 				<div class="header__row">
@@ -165,9 +166,92 @@
 
 			<!--begin-->
 			<section class="content">
+
 				<!--begin-->
 				<section class="slider">
-
+					<div id="main-slider" class="carousel slide" data-ride="carousel">
+						<ol class="carousel-indicators">
+							<li data-target="#main-slider" data-slide-to="0" class="active"></li>
+							<li data-target="#main-slider" data-slide-to="1"></li>
+							<li data-target="#main-slider" data-slide-to="2"></li>
+							<li data-target="#main-slider" data-slide-to="3"></li>
+						</ol>
+						<div class="carousel-inner" role="listbox">
+							<div class="item active">
+								<img src="./resources/img/slider/slide-1.jpg" alt="slide">
+								<div class="container slider__text-content">
+									<div class="skew"></div>
+									<a href="#" class="slider__link">
+										Гарантируем качество и <br>
+										своевременность поставок<br> 
+										в назначенный срок
+									</a>
+								</div>
+							</div>
+							<div class="item">
+								<img src="./resources/img/slider/slide-1.jpg" alt="slide">
+								<div class="container slider__text-content">
+									<div class="skew"></div>
+									<a href="#" class="slider__link">
+										Комплексное обслуживание клиентов  – <br> 
+										отбор, комплектация, обработка <br>
+										(резка, гибка, обжиг, грунтовка) <br> 
+										и упаковка металлопроката
+									</a>
+								</div>
+							</div>
+							<div class="item">
+								<img src="./resources/img/slider/slide-1.jpg" alt="slide">
+								<div class="container slider__text-content">
+									<div class="skew"></div>
+									<a href="#" class="slider__link">
+										Гибкая ценовая политика <br>
+										и индивидуальный подход <br>
+										каждому клиенту
+									</a>
+								</div>
+							</div>
+							<div class="item">
+								<img src="./resources/img/slider/slide-1.jpg" alt="slide">
+								<div class="container slider__text-content">
+									<div class="skew"></div>
+									<a href="#" class="slider__link">
+										Фонд, учрежденный Диной Корзун и <br>
+										Чулпан Хаматовой, помогает детям с онкогематологическими <br> 
+										и другими тяжелыми заболеваниями <br>
+										в борьбе с их недугами. <br>
+										Компания «Атом-Сталь» вносит <br>
+										свой скромный вклад <br>
+										в здоровое будущее для детей!
+									</a>
+								</div>
+							</div>
+							<div class="container slider__controls">
+								<a href="#main-slider" role="button" data-slide="prev">
+									<div class="slider__btn slider__btn--prev">
+										<i class="icon icon-chevron-left slider__plus-icon"></i>
+									</div>
+								</a>
+								<a href="#main-slider" role="button" data-slide="next">
+									<div class="slider__btn slider__btn--next">
+										<i class="icon icon-chevron-right slider__plus-icon"></i>
+									</div>
+								</a>
+								<div class="slider__plus slider__plus--top-left">
+									<i class="icon icon-plus slider__plus-icon"></i>
+								</div>
+								<div class="slider__plus slider__plus--top-right">
+									<i class="icon icon-plus slider__plus-icon"></i>
+								</div>
+								<div class="slider__plus slider__plus--bottom-right">
+									<i class="icon icon-plus slider__plus-icon"></i>
+								</div>
+								<div class="slider__plus slider__plus--bottom-left">
+									<i class="icon icon-plus slider__plus-icon"></i>
+								</div>
+							</div>
+						</div>
+					</div>
 				</section>
 				<!--end-->
 
@@ -257,7 +341,7 @@
 
 				<!--begin-->
 				<section class="information">
-					<div class="container large-desktop-visible">	
+					<div class="container large-desktop-visible">
 						<div class="row">
 							<div class="col-md-6">
 								<div class="information-header">
@@ -286,12 +370,12 @@
 								<div class="large-desktop-hide">
 									<a href="#" class="information__link information__link--margin ">Благодарственные письма</a>
 								</div>
-								<div class="information__item">		
+								<div class="information__item">
 									<div class="information-body">
 										<div class="information-body__line">
 											<div class="information-body__pic">
 												<img src="./resources/img/avatar.png" class="img-responsive" alt="letter">
-											</div>	
+											</div>
 											<div class="information-body__data">
 												<div class="information-body__date">07.06.2016</div>
 												<div class="information-body__title">Михаил Андреевич</div>
@@ -305,12 +389,12 @@
 										<div class="divider"></div>
 									</div>
 								</div>
-								<div class="information__item">		
+								<div class="information__item">
 									<div class="information-body">
 										<div class="information-body__line">
 											<div class="information-body__pic">
 												<img src="./resources/img/avatar.png" class="img-responsive" alt="letter">
-											</div>	
+											</div>
 											<div class="information-body__data">
 												<div class="information-body__date">07.06.2016</div>
 												<div class="information-body__title">Михаил Андреевич</div>
@@ -330,12 +414,12 @@
 								<div class="large-desktop-hide">
 									<a href="#" class="information__link information__link--margin ">Все новости</a>
 								</div>
-								<div class="information__item">		
+								<div class="information__item">
 									<div class="information-body">
 										<div class="information-body__line">
 											<div class="information-body__pic">
 												<img src="./resources/img/news-items/news-item-1--mini.png" class="img-responsive" alt="letter">
-											</div>	
+											</div>
 											<div class="information-body__data">
 												<div class="information-body__date">07.06.2016</div>
 												<div class="information-body__title">Название новости</div>
@@ -349,12 +433,12 @@
 										<div class="divider"></div>
 									</div>
 								</div>
-								<div class="information__item">		
+								<div class="information__item">
 									<div class="information-body">
 										<div class="information-body__line">
 											<div class="information-body__pic">
 												<img src="./resources/img/news-items/news-item-1--mini.png" class="img-responsive" alt="letter">
-											</div>	
+											</div>
 											<div class="information-body__data">
 												<div class="information-body__date">07.06.2016</div>
 												<div class="information-body__title">Название новости</div>
@@ -468,6 +552,7 @@
 				</div>
 			</footer>
 			<!--end-->
+			
 		</div>
 	</div>
 
