partners component added

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
 	<title>Atom App</title>
 	<link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./resources/icons/sprite/sprite.css">
-	<link rel="stylesheet" href="./dist/bundle.css?rev=8186a3166998fa1c2947d568a4960a0d">
+	<link rel="stylesheet" href="./dist/bundle.css?rev=b12907377082cb27b8347aad5dbf0c8d">
 	<!--?rev=@@hash-->
 </head>
 
@@ -229,12 +229,12 @@
 							<div class="container slider__controls">
 								<a href="#main-slider" role="button" data-slide="prev">
 									<div class="slider__btn slider__btn--prev">
-										<i class="icon icon-chevron-left slider__plus-icon"></i>
+										<i class="icon icon-chevron-left slider__icon"></i>
 									</div>
 								</a>
 								<a href="#main-slider" role="button" data-slide="next">
 									<div class="slider__btn slider__btn--next">
-										<i class="icon icon-chevron-right slider__plus-icon"></i>
+										<i class="icon icon-chevron-right slider__icon"></i>
 									</div>
 								</a>
 								<div class="slider__plus slider__plus--top-left">
@@ -329,7 +329,7 @@
 									</div>
 								</div>
 							</div>
-							<a href="#" class="production__circle-btn"></a>
+							<a href="#" class="icon icon-circle-btn production__circle-btn"></a>
 							<div class="production__btn">
 								<a href="#" class="atm-link-button atm-link-button--black">Каталог</a>
 							</div>
@@ -458,6 +458,67 @@
 				</section>
 				<!--end-->
 
+				<!--begin-->
+				<section class="partners">
+					<div class="container">
+						<div class="skew skew--position"></div>
+						<h2 class="partners__title">Наши партнеры</h2>				
+							<div id="partners-carousel" class="carousel slide" data-ride="carousel">
+								<div class="carousel-inner" role="listbox">
+									<div class="item active">
+										<div class="partners__logotypes">
+											<a href="#">
+												<img src="./resources/img/partners/logo.png" class="partners__pic" alt="logo">
+											</a>
+											<a href="#">
+												<img src="./resources/img/partners/logo.png" class="partners__pic" alt="logo">
+											</a>
+											<a href="#">
+												<img src="./resources/img/partners/logo.png" class="partners__pic" alt="logo">
+											</a>
+											<a href="#">
+												<img src="./resources/img/partners/logo.png" class="partners__pic" alt="logo">
+											</a>
+											<a href="#">
+												<img src="./resources/img/partners/logo.png" class="partners__pic" alt="logo">
+											</a>
+										</div>
+									</div>
+									<div class="item">
+										<div class="partners__logotypes">
+											<a href="#">
+												<img src="./resources/img/partners/logo.png" class="partners__pic" alt="logo">
+											</a>
+											<a href="#">
+												<img src="./resources/img/partners/logo.png" class="partners__pic" alt="logo">
+											</a>
+											<a href="#">
+												<img src="./resources/img/partners/logo.png" class="partners__pic" alt="logo">
+											</a>
+											<a href="#">
+												<img src="./resources/img/partners/logo.png" class="partners__pic" alt="logo">
+											</a>
+											<a href="#">
+												<img src="./resources/img/partners/logo.png" class="partners__pic" alt="logo">
+											</a>
+										</div>
+									</div>
+								</div>
+								<a href="#partners-carousel" role="button" data-slide="prev">
+									<div class="partners__btn partners__btn--prev">
+										<i class="icon icon-circle-left partners__icon"></i>
+									</div>
+								</a>
+								<a href="#partners-carousel" role="button" data-slide="next">
+									<div class="partners__btn partners__btn--next">
+										<i class="icon icon-circle-right partners__icon"></i>
+									</div>
+								</a>
+							</div>		
+					</div>
+				</section>
+				<!--end-->
+
 			</section>
 			<!--end-->
 
@@ -552,14 +613,14 @@
 				</div>
 			</footer>
 			<!--end-->
-			
+
 		</div>
 	</div>
 
 	<script src="./bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="./bower_components/hammerjs/hammer.min.js"></script>
 	<script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-	<script src="./dist/bundle.js?rev=7d4b58f516f84e07152e8b6a3ee5f74d"></script>
+	<script src="./dist/bundle.js?rev=9bab131343119416b94c938ac9b41dea"></script>
 </body>
 
 </html>
